# IGVC2025

./: .gitignore  Dockerfile  README.md  docker-compose.yml  frames.gv
bot_ws/src/simulation/: package.xml  setup.py
bot_ws/src/simulation/launch/: display.launch.py  gazebo.launch.py
bot_ws/src/simulation/simulation/: __init__.py
bot_ws/src/simulation/urdf/: model.urdf
scripts/: entrypoint.sh
src/ashwini/: CMakeLists.txt  default.rviz  package.xml
src/ashwini/config/: costmap_common.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  dwa_planner.yaml  global_costmap.yaml  global_costmap_params.yaml  local_costmap.yaml  local_costmap_params.yaml  trajectory_planner.yaml
src/ashwini/launch/: amcl.launch  gazebo_world.launch  gmapping_demo.launch  house.launch  localization.launch  maze_navigation.launch  move_base.launch  navigation.launch  robot_description.launch  slam_navigation.launch  waypoint.launch  world.launch
src/ashwini/model/ashwini/: model.sdf
src/ashwini/script/: control_bot.py  imgConvertor.py  move_around.py  move_smart.py  move_straight.py  runCV.py  waypoint.py  waypoint_nav.py
src/ashwini/urdf/: ashwini.gazebo  ashwini.xacro
src/ashwini/worlds/: empty.world  empty_bot.world
src/base/: CMakeLists.txt  package.xml
src/base/src/: controller.cpp
src/lane_detection/: CMakeLists.txt  package.xml
src/lane_detection/scripts/: lane_detector.py  lane_detectorbk.py  test_model.py
src/planner/: CMakeLists.txt  package.xml
src/planner/cfg/: WaypointPlanner.cfg
src/planner/config/: base_global_planner_params.yaml
src/planner/include/waypoint_global_planner/: waypoint_global_planner.h
src/planner/src/: waypoint_global_planner.cpp
