<package format="2">
  <name>waypoint_global_planner</name>
  <version>1.0.0</version>
  <description>Waypoint-based global planner with obstacle avoidance</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>dynamic_reconfigure</buildtool_depend>

  <depend>base_local_planner</depend>
  <depend>costmap_2d</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_core</depend>
  <depend>nav_msgs</depend>
  <depend>navfn</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>eigen</depend>

  <export>
    <nav_core plugin="${prefix}/bgp_plugin.xml"/>
  </export>
</package>
