<?xml version="1.0"?>
<package format="3">
  <name>simulation</name>
  <version>0.0.0</version>
  <description>Robot package using ament_python</description>
  <maintainer email="daksh@todo.todo">daksh</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
